# bevy_rapier

bevy_rapier2d/: Cargo.toml
src/: lib.rs
src/physics/: collider_component_set.rs  components.rs  mod.rs  plugins.rs  resources.rs  rigid_body_component_set.rs  systems.rs  time.rs  wrapper.rs
src_debug_ui/: systems.rs
