[package]
name = "bevy_rapier2d"
version = "0.12.1"
authors = ["Sébastien Crozet <developer@crozet.re>"]
description = "2-dimensional physics engine in Rust, official Bevy plugin."
documentation = "http://docs.rs/bevy_rapier2d"
homepage = "http://rapier.rs"
repository = "https://github.com/dimforge/bevy_rapier"
readme = "README.md"
keywords = [ "physics", "dynamics", "rigid", "real-time", "joints" ]
license = "Apache-2.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "../src/lib.rs"
required-features = [ "dim2" ]

[features]
default = [ "dim2", "render" ]
dim2 = []
render = [ "bevy/render" ]
parallel = [ "rapier2d/parallel" ]
simd-stable = [ "rapier2d/simd-stable" ]
simd-nightly = [ "rapier2d/simd-nightly" ]
wasm-bindgen = [ "rapier2d/wasm-bindgen" ]
serde-serialize = [ "rapier2d/serde-serialize" ]
enhanced-determinism = [ "rapier2d/enhanced-determinism" ]

[dependencies]
bevy_app = { git="https://github.com/bevyengine/bevy",rev = "523e7af73930be4dc726ce44c609a2dcae0486ab", default-features = false }
bevy_ecs = { git="https://github.com/bevyengine/bevy",rev = "523e7af73930be4dc726ce44c609a2dcae0486ab", default-features = false }
bevy_transform = { git="https://github.com/bevyengine/bevy",rev = "523e7af73930be4dc726ce44c609a2dcae0486ab", default-features = false }
bevy_math = { git="https://github.com/bevyengine/bevy",rev = "523e7af73930be4dc726ce44c609a2dcae0486ab", default-features = false }
bevy_utils = { git="https://github.com/bevyengine/bevy",rev = "523e7af73930be4dc726ce44c609a2dcae0486ab", default-features = false }
nalgebra = { version = "0.30.1", features = [ "convert-glam020" ] }
# Don't enable the default features because we don't need the ColliderSet/RigidBodySet
rapier2d = { version = "0.12.0-alpha.0", default-features = false, features = [ "dim2", "f32" ] }

[dev-dependencies]
bevy = "0.6"
oorandom = "11"